# DeepRecSys

./: README.md
homeworks/hw1/: homework.ipynb  tests.py
homeworks/hw2/: homework.ipynb  tests.py
week_04/: README.md
week_04/seminar/neuralrec/: .gitignore  README.md  pyproject.toml
week_04/seminar/neuralrec/examples/: seminar_notebook.ipynb  train_ddp.py
week_04/seminar/neuralrec/neuralrec/data/: dataloader.py  dataset.py  transforms.py
week_04/seminar/neuralrec/neuralrec/ext/yambda/: huggingface.py  transforms.py  utils.py
week_04/seminar/neuralrec/neuralrec/nn/: autocast.py  flashattn_transformer.py  transformer.py
week_04/seminar/neuralrec/neuralrec/run/: distributed.py  train.py
week_04/seminar/neuralrec/neuralrec/run/callbacks/: __init__.py  base.py  clipping.py  logging.py  tensorboard.py  validation.py
week_04/seminar/neuralrec/tests/nn/: transformer.py
week_05/: README.md
week_06/: README.md
week_07/: README.md
